--- a/mirage/dune
+++ b/mirage/dune
@@ -1,9 +1,23 @@
 (library
-  (name        conduit_mirage)
-  (public_name conduit-mirage)
-  (preprocess  (pps ppx_sexp_conv))
-  (modules     conduit_mirage resolver_mirage conduit_xenstore)
-  (wrapped     false)
-  (libraries   conduit conduit-lwt mirage-stack mirage-clock mirage-random mirage-time
-               mirage-flow mirage-flow-combinators dns-client.mirage ipaddr-sexp
-               vchan tls tls-mirage xenstore.client uri.services))
+ (name conduit_mirage)
+ (public_name conduit-mirage)
+ (modules conduit_mirage)
+ (libraries conduit conduit-lwt))
+
+(library
+ (name conduit_mirage_tls)
+ (public_name conduit-mirage.tls)
+ (modules conduit_mirage_tls)
+ (libraries conduit-mirage conduit-tls))
+
+(library
+ (name conduit_mirage_flow)
+ (public_name conduit-mirage.flow)
+ (modules conduit_mirage_flow)
+ (libraries conduit-mirage conduit-lwt.flow))
+
+(library
+ (name conduit_mirage_tcp)
+ (public_name conduit-mirage.tcp)
+ (modules conduit_mirage_tcp)
+ (libraries logs mirage-stack bigstringaf ke tcpip.tcp conduit-mirage))
