--- a/conduit-lwt.opam
+++ b/conduit-lwt.opam
@@ -1,24 +1,29 @@
 opam-version: "2.0"
 maintainer: "anil@recoil.org"
 authors: [
-  "Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire" "Rudi Grinberg"
+  "Anil Madhavapeddy"
+  "Thomas Leonard"
+  "Thomas Gazagnaire"
+  "Rudi Grinberg"
+  "Romain Calascibetta"
 ]
 license: "ISC"
 tags: "org:mirage"
 homepage: "https://github.com/mirage/ocaml-conduit"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
-depends: [
-  "ocaml" {>= "4.03.0"}
-  "dune"
-  "base-unix"
-  "ppx_sexp_conv" {>="v0.12.0"}
-  "sexplib"
-  "conduit" {=version}
-  "lwt" {>= "3.0.0"}
-]
+dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
+synopsis: "A portable network connection establishment library using Lwt"
+
 build: [
   ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
 ]
-dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
-synopsis: "A portable network connection establishment library using Lwt"
+
+depends: [
+  "ocaml" {>= "4.07.0"}
+  "dune"
+  "conduit"
+  "cstruct"
+  "lwt"
+  "mirage-flow"
+]
