--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -1,39 +1,29 @@
 opam-version: "2.0"
 maintainer: "anil@recoil.org"
-authors: ["Anil Madhavapeddy" "Thomas Leonard" "Thomas Gazagnaire"]
+authors: [
+  "Anil Madhavapeddy"
+  "Thomas Leonard"
+  "Thomas Gazagnaire"
+]
 license: "ISC"
 tags: "org:mirage"
 homepage: "https://github.com/mirage/ocaml-conduit"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
-depends: [
-  "ocaml" {>= "4.07.0"}
-  "dune"
-  "ppx_sexp_conv" {>="v0.12.0"}
-  "sexplib"
-  "cstruct" {>= "3.0.0"}
-  "mirage-stack" {>= "2.0.0"}
-  "mirage-clock" {>= "3.0.0"}
-  "mirage-flow" {>= "2.0.0"}
-  "mirage-flow-combinators" {>= "2.0.0"}
-  "mirage-random" {>= "2.0.0"}
-  "mirage-time" {>= "2.0.0"}
-  "dns-client" {>= "4.5.0"}
-  "conduit-lwt"
-  "vchan" {>= "5.0.0"}
-  "xenstore"
-  "tls" {>= "0.11.0"}
-  "tls-mirage" {>= "0.11.0"}
-  "ipaddr" {>= "3.0.0"}
-  "ipaddr-sexp"
-]
-conflicts: [
-  "mirage-conduit"
-]
+dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
+synopsis: "A network connection establishment library for MirageOS"
 
 build: [
   ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name] {with-test}
 ]
-dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
-synopsis: "A network connection establishment library for MirageOS"
+
+depends: [
+  "ocaml" {>= "4.07.0"}
+  "dune"
+  "conduit-lwt"
+  "conduit-tls"
+  "tcpip"
+  "mirage-flow"
+]
+
