--- a/tests/dune
+++ b/tests/dune
@@ -60,3 +60,13 @@
  (alias runtest)
  (action
   (run ./flow.exe)))
+
+(executable
+ (name resolvers)
+ (modules resolvers)
+ (libraries alcotest rresult conduit))
+
+(rule
+ (alias runtest)
+ (action
+  (run ./resolvers.exe)))
