--- a/tests/dune
+++ b/tests/dune
@@ -1,16 +1,19 @@
+(library
+ (name common)
+ (modules common)
+ (libraries bigarray cstruct stdlib-shims bigstringaf ke fmt rresult conduit))
+
 (executable
  (name ping_pong)
  (modules ping_pong)
- (libraries bigstringaf ke fmt rresult fmt.tty logs.fmt
-   mirage-crypto-rng.unix conduit-lwt-unix.tcp conduit-lwt-unix.tls
-   conduit-lwt-unix.ssl))
+ (libraries common fmt.tty logs.fmt mirage-crypto-rng.unix
+   conduit-lwt-unix.tcp conduit-lwt-unix.tls conduit-lwt-unix.ssl))
 
 (executable
  (name with_async)
  (modules with_async)
- (libraries stdlib-shims bigstringaf ke fmt rresult fmt.tty logs.fmt
-   mirage-crypto-rng.unix conduit-async.tcp conduit-async.tls
-   conduit-async.ssl))
+ (libraries common fmt.tty logs.fmt mirage-crypto-rng.unix conduit-async.tcp
+   conduit-async.tls conduit-async.ssl))
 
 (executable
  (name test_lwt)
