--- a/conduit-async-tls.opam
+++ b/conduit-async-tls.opam
@@ -23,7 +23,7 @@ depends: [
   "ocaml" {>= "4.03.0"}
   "dune"
   "core"
-  "conduit"
+  "conduit-async"
   "async" {>= "v0.12.0"}
   "async_ssl"
   "conduit-tls"
