--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -25,7 +25,6 @@ depends: [
   "core"
   "conduit"
   "async" {>= "v0.12.0"}
-  "async_ssl"
-  "conduit-tls"
+  "cstruct"
   "stdlib-shims" {with-test}
 ]
